--- a/src/_config.yml
+++ b/src/_config.yml
@@ -18,7 +18,7 @@ email: contact@taruen.com
 description: > # this means to ignore newlines until "baseurl:"
   We're a group of people developing Natural
   Language Processing tools for Tatar and related languages.
-  We are based in Kazan, Tatarstan, Russia.
+  We are based in Istanbul.
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "https://taruen.github.io" # the base hostname & protocol for your site
 github_username:    taruen
